reference/5.1/Microsoft.PowerShell.Core/About/about_Type_Accelerators.md
---
description: Beskriver de typ acceleratorer som är tillgängliga för .NET Framework-klasser
keywords: powershell,cmdlet
Locale: en-US
ms.date: 05/01/2020
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.core/about/about_type_accelerators?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: about_Type_Accelerators
ms.openlocfilehash: 21093f3a649212526c3fc3eb5405e2a7ce6e49f3
ms.sourcegitcommit: f874dc1d4236e06a3df195d179f59e0a7d9f8436
ms.translationtype: MT
ms.contentlocale: sv-SE
ms.lasthandoff: 10/13/2020
ms.locfileid: "93271371"
---
# <a name="about-type-accelerators"></a><span data-ttu-id="3c3ce-104">Om typ acceleratorer</span><span class="sxs-lookup"><span data-stu-id="3c3ce-104">About Type Accelerators</span></span>

## <a name="short-desription"></a><span data-ttu-id="3c3ce-105">KORT BESKRIVNING</span><span class="sxs-lookup"><span data-stu-id="3c3ce-105">SHORT DESRIPTION</span></span>
<span data-ttu-id="3c3ce-106">Beskriver de typ acceleratorer som är tillgängliga för .NET Framework-klasser</span><span class="sxs-lookup"><span data-stu-id="3c3ce-106">Describes the Type accelerators available for .NET framework classes</span></span>

## <a name="long-description"></a><span data-ttu-id="3c3ce-107">LÅNG BESKRIVNING</span><span class="sxs-lookup"><span data-stu-id="3c3ce-107">LONG DESCRIPTION</span></span>

<span data-ttu-id="3c3ce-108">Typ acceleratorer är alias för .NET Framework-klasser.</span><span class="sxs-lookup"><span data-stu-id="3c3ce-108">Type accelerators are aliases for .NET framework classes.</span></span> <span data-ttu-id="3c3ce-109">De gör att du kan komma åt vissa .NET Framework-klasser utan att uttryckligen ange hela klass namnet.</span><span class="sxs-lookup"><span data-stu-id="3c3ce-109">They allow you to access specific .NET framework classes without having to explicitly type the entire class name.</span></span> <span data-ttu-id="3c3ce-110">Du kan till exempel förkorta klassen **AliasAttribute** från `[System.Management.Automation.AliasAttribute]` till `[Alias]` .</span><span class="sxs-lookup"><span data-stu-id="3c3ce-110">For example, you can shorten the **AliasAttribute** class from `[System.Management.Automation.AliasAttribute]` to `[Alias]`.</span></span>

> [!NOTE]
> <span data-ttu-id="3c3ce-111">Alla typ acceleratorer måste fortfarande omslutas med hakparenteser ( `[]` ).</span><span class="sxs-lookup"><span data-stu-id="3c3ce-111">All type accelerators still need to be wrapped in square brackets(`[]`).</span></span>

## <a name="available-type-accelerators"></a><span data-ttu-id="3c3ce-112">Tillgängliga typ acceleratorer</span><span class="sxs-lookup"><span data-stu-id="3c3ce-112">Available Type Accelerators</span></span>

|        <span data-ttu-id="3c3ce-113">Gas</span><span class="sxs-lookup"><span data-stu-id="3c3ce-113">Accelerator</span></span>          |                           <span data-ttu-id="3c3ce-114">Fullständigt klass namn</span><span class="sxs-lookup"><span data-stu-id="3c3ce-114">Full Class Name</span></span>                           |
|---------------------------- | ------------------------------------------------------------------- |
|<span data-ttu-id="3c3ce-115">ADSI</span><span class="sxs-lookup"><span data-stu-id="3c3ce-115">adsi</span></span>                         | <span data-ttu-id="3c3ce-116">System. DirectoryServices. DirectoryEntry</span><span class="sxs-lookup"><span data-stu-id="3c3ce-116">System.DirectoryServices.DirectoryEntry</span></span>                             |
|<span data-ttu-id="3c3ce-117">adsisearcher</span><span class="sxs-lookup"><span data-stu-id="3c3ce-117">adsisearcher</span></span>                 | <span data-ttu-id="3c3ce-118">System. DirectoryServices. DirectorySearcher</span><span class="sxs-lookup"><span data-stu-id="3c3ce-118">System.DirectoryServices.DirectorySearcher</span></span>                          |
|<span data-ttu-id="3c3ce-119">Alias</span><span class="sxs-lookup"><span data-stu-id="3c3ce-119">Alias</span></span>                        | <span data-ttu-id="3c3ce-120">System. Management. Automation. AliasAttribute</span><span class="sxs-lookup"><span data-stu-id="3c3ce-120">System.Management.Automation.AliasAttribute</span></span>                         |
|<span data-ttu-id="3c3ce-121">AllowEmptyCollection</span><span class="sxs-lookup"><span data-stu-id="3c3ce-121">AllowEmptyCollection</span></span>         | <span data-ttu-id="3c3ce-122">System. Management. Automation. AllowEmptyCollectionAttribute</span><span class="sxs-lookup"><span data-stu-id="3c3ce-122">System.Management.Automation.AllowEmptyCollectionAttribute</span></span>          |
|<span data-ttu-id="3c3ce-123">AllowEmptyString</span><span class="sxs-lookup"><span data-stu-id="3c3ce-123">AllowEmptyString</span></span>             | <span data-ttu-id="3c3ce-124">System. Management. Automation. AllowEmptyStringAttribute</span><span class="sxs-lookup"><span data-stu-id="3c3ce-124">System.Management.Automation.AllowEmptyStringAttribute</span></span>              |
|<span data-ttu-id="3c3ce-125">AllowNull</span><span class="sxs-lookup"><span data-stu-id="3c3ce-125">AllowNull</span></span>                    | <span data-ttu-id="3c3ce-126">System. Management. Automation. AllowNullAttribute</span><span class="sxs-lookup"><span data-stu-id="3c3ce-126">System.Management.Automation.AllowNullAttribute</span></span>                     |
|<span data-ttu-id="3c3ce-127">ArgumentCompleter</span><span class="sxs-lookup"><span data-stu-id="3c3ce-127">ArgumentCompleter</span></span>            | <span data-ttu-id="3c3ce-128">System. Management. Automation. ArgumentCompleterAttribute</span><span class="sxs-lookup"><span data-stu-id="3c3ce-128">System.Management.Automation.ArgumentCompleterAttribute</span></span>             |
|<span data-ttu-id="3c3ce-129">matris</span><span class="sxs-lookup"><span data-stu-id="3c3ce-129">array</span></span>                        | <span data-ttu-id="3c3ce-130">System. array</span><span class="sxs-lookup"><span data-stu-id="3c3ce-130">System.Array</span></span>                                                        |
|<span data-ttu-id="3c3ce-131">bigint</span><span class="sxs-lookup"><span data-stu-id="3c3ce-131">bigint</span></span>                       | <span data-ttu-id="3c3ce-132">System. Numerics. BigInteger</span><span class="sxs-lookup"><span data-stu-id="3c3ce-132">System.Numerics.BigInteger</span></span>                                          |
|<span data-ttu-id="3c3ce-133">boolesk</span><span class="sxs-lookup"><span data-stu-id="3c3ce-133">bool</span></span>                         | <span data-ttu-id="3c3ce-134">System. Boolean</span><span class="sxs-lookup"><span data-stu-id="3c3ce-134">System.Boolean</span></span>                                                      |
|<span data-ttu-id="3c3ce-135">stor</span><span class="sxs-lookup"><span data-stu-id="3c3ce-135">byte</span></span>                         | <span data-ttu-id="3c3ce-136">System. byte</span><span class="sxs-lookup"><span data-stu-id="3c3ce-136">System.Byte</span></span>                                                         |
|<span data-ttu-id="3c3ce-137">char</span><span class="sxs-lookup"><span data-stu-id="3c3ce-137">char</span></span>                         | <span data-ttu-id="3c3ce-138">System. char</span><span class="sxs-lookup"><span data-stu-id="3c3ce-138">System.Char</span></span>                                                         |
|<span data-ttu-id="3c3ce-139">cimclass</span><span class="sxs-lookup"><span data-stu-id="3c3ce-139">cimclass</span></span>                     | <span data-ttu-id="3c3ce-140">Microsoft. Management. Infrastructure. CimClass</span><span class="sxs-lookup"><span data-stu-id="3c3ce-140">Microsoft.Management.Infrastructure.CimClass</span></span>                        |
|<span data-ttu-id="3c3ce-141">cimconverter</span><span class="sxs-lookup"><span data-stu-id="3c3ce-141">cimconverter</span></span>                 | <span data-ttu-id="3c3ce-142">Microsoft. Management. Infrastructure. CimConverter</span><span class="sxs-lookup"><span data-stu-id="3c3ce-142">Microsoft.Management.Infrastructure.CimConverter</span></span>                    |
|<span data-ttu-id="3c3ce-143">ciminstance</span><span class="sxs-lookup"><span data-stu-id="3c3ce-143">ciminstance</span></span>                  | <span data-ttu-id="3c3ce-144">Microsoft. Management. Infrastructure. CimInstance</span><span class="sxs-lookup"><span data-stu-id="3c3ce-144">Microsoft.Management.Infrastructure.CimInstance</span></span>                     |
|<span data-ttu-id="3c3ce-145">CimSession</span><span class="sxs-lookup"><span data-stu-id="3c3ce-145">CimSession</span></span>                   | <span data-ttu-id="3c3ce-146">Microsoft. Management. Infrastructure. CimSession</span><span class="sxs-lookup"><span data-stu-id="3c3ce-146">Microsoft.Management.Infrastructure.CimSession</span></span>                      |
|<span data-ttu-id="3c3ce-147">cimtype</span><span class="sxs-lookup"><span data-stu-id="3c3ce-147">cimtype</span></span>                      | <span data-ttu-id="3c3ce-148">Microsoft. Management. Infrastructure. CimType</span><span class="sxs-lookup"><span data-stu-id="3c3ce-148">Microsoft.Management.Infrastructure.CimType</span></span>                         |
|<span data-ttu-id="3c3ce-149">CmdletBinding</span><span class="sxs-lookup"><span data-stu-id="3c3ce-149">CmdletBinding</span></span>                | <span data-ttu-id="3c3ce-150">System. Management. Automation. CmdletBindingAttribute</span><span class="sxs-lookup"><span data-stu-id="3c3ce-150">System.Management.Automation.CmdletBindingAttribute</span></span>                 |
|<span data-ttu-id="3c3ce-151">CultureInfo</span><span class="sxs-lookup"><span data-stu-id="3c3ce-151">cultureinfo</span></span>                  | <span data-ttu-id="3c3ce-152">System. globalisering. CultureInfo</span><span class="sxs-lookup"><span data-stu-id="3c3ce-152">System.Globalization.CultureInfo</span></span>                                    |
|<span data-ttu-id="3c3ce-153">datetime</span><span class="sxs-lookup"><span data-stu-id="3c3ce-153">datetime</span></span>                     | <span data-ttu-id="3c3ce-154">System. DateTime</span><span class="sxs-lookup"><span data-stu-id="3c3ce-154">System.DateTime</span></span>                                                     |
|<span data-ttu-id="3c3ce-155">decimal</span><span class="sxs-lookup"><span data-stu-id="3c3ce-155">decimal</span></span>                      | <span data-ttu-id="3c3ce-156">System. decimal</span><span class="sxs-lookup"><span data-stu-id="3c3ce-156">System.Decimal</span></span>                                                      |
|<span data-ttu-id="3c3ce-157">double</span><span class="sxs-lookup"><span data-stu-id="3c3ce-157">double</span></span>                       | <span data-ttu-id="3c3ce-158">System. Double</span><span class="sxs-lookup"><span data-stu-id="3c3ce-158">System.Double</span></span>                                                       |
|<span data-ttu-id="3c3ce-159">DscLocalConfigurationManager</span><span class="sxs-lookup"><span data-stu-id="3c3ce-159">DscLocalConfigurationManager</span></span> | <span data-ttu-id="3c3ce-160">System. Management. Automation. DscLocalConfigurationManagerAttribute</span><span class="sxs-lookup"><span data-stu-id="3c3ce-160">System.Management.Automation.DscLocalConfigurationManagerAttribute</span></span>  |
|<span data-ttu-id="3c3ce-161">DscProperty</span><span class="sxs-lookup"><span data-stu-id="3c3ce-161">DscProperty</span></span>                  | <span data-ttu-id="3c3ce-162">System. Management. Automation. DscPropertyAttribute</span><span class="sxs-lookup"><span data-stu-id="3c3ce-162">System.Management.Automation.DscPropertyAttribute</span></span>                   |
|<span data-ttu-id="3c3ce-163">Dscresource Keyword Supports</span><span class="sxs-lookup"><span data-stu-id="3c3ce-163">DscResource</span></span>                  | <span data-ttu-id="3c3ce-164">System. Management. Automation. DscResourceAttribute</span><span class="sxs-lookup"><span data-stu-id="3c3ce-164">System.Management.Automation.DscResourceAttribute</span></span>                   |
|<span data-ttu-id="3c3ce-165">flyt</span><span class="sxs-lookup"><span data-stu-id="3c3ce-165">float</span></span>                        | <span data-ttu-id="3c3ce-166">System. Single</span><span class="sxs-lookup"><span data-stu-id="3c3ce-166">System.Single</span></span>                                                       |
|<span data-ttu-id="3c3ce-167">guid</span><span class="sxs-lookup"><span data-stu-id="3c3ce-167">guid</span></span>                         | <span data-ttu-id="3c3ce-168">System. GUID</span><span class="sxs-lookup"><span data-stu-id="3c3ce-168">System.Guid</span></span>                                                         |
|<span data-ttu-id="3c3ce-169">hash</span><span class="sxs-lookup"><span data-stu-id="3c3ce-169">hashtable</span></span>                    | <span data-ttu-id="3c3ce-170">System. Collections. hash</span><span class="sxs-lookup"><span data-stu-id="3c3ce-170">System.Collections.Hashtable</span></span>                                        |
|<span data-ttu-id="3c3ce-171">initialsessionstate</span><span class="sxs-lookup"><span data-stu-id="3c3ce-171">initialsessionstate</span></span>          | <span data-ttu-id="3c3ce-172">System.Management.Automation.Runspaces.InitialSessionState</span><span class="sxs-lookup"><span data-stu-id="3c3ce-172">System.Management.Automation.Runspaces.InitialSessionState</span></span>          |
|<span data-ttu-id="3c3ce-173">int</span><span class="sxs-lookup"><span data-stu-id="3c3ce-173">int</span></span>                          | <span data-ttu-id="3c3ce-174">System. Int32</span><span class="sxs-lookup"><span data-stu-id="3c3ce-174">System.Int32</span></span>                                                        |
|<span data-ttu-id="3c3ce-175">Int16</span><span class="sxs-lookup"><span data-stu-id="3c3ce-175">int16</span></span>                        | <span data-ttu-id="3c3ce-176">System. Int16</span><span class="sxs-lookup"><span data-stu-id="3c3ce-176">System.Int16</span></span>                                                        |
|<span data-ttu-id="3c3ce-177">Int32</span><span class="sxs-lookup"><span data-stu-id="3c3ce-177">int32</span></span>                        | <span data-ttu-id="3c3ce-178">System. Int32</span><span class="sxs-lookup"><span data-stu-id="3c3ce-178">System.Int32</span></span>                                                        |
|<span data-ttu-id="3c3ce-179">Int64</span><span class="sxs-lookup"><span data-stu-id="3c3ce-179">int64</span></span>                        | <span data-ttu-id="3c3ce-180">System. Int64</span><span class="sxs-lookup"><span data-stu-id="3c3ce-180">System.Int64</span></span>                                                        |
|<span data-ttu-id="3c3ce-181">adresser</span><span class="sxs-lookup"><span data-stu-id="3c3ce-181">ipaddress</span></span>                    | <span data-ttu-id="3c3ce-182">System .net. IPAddress</span><span class="sxs-lookup"><span data-stu-id="3c3ce-182">System.Net.IPAddress</span></span>                                                |
|<span data-ttu-id="3c3ce-183">IPEndpoint</span><span class="sxs-lookup"><span data-stu-id="3c3ce-183">IPEndpoint</span></span>                   | <span data-ttu-id="3c3ce-184">System .net. IPEndPoint</span><span class="sxs-lookup"><span data-stu-id="3c3ce-184">System.Net.IPEndPoint</span></span>                                               |
|<span data-ttu-id="3c3ce-185">long</span><span class="sxs-lookup"><span data-stu-id="3c3ce-185">long</span></span>                         | <span data-ttu-id="3c3ce-186">System. Int64</span><span class="sxs-lookup"><span data-stu-id="3c3ce-186">System.Int64</span></span>                                                        |
|<span data-ttu-id="3c3ce-187">adress</span><span class="sxs-lookup"><span data-stu-id="3c3ce-187">mailaddress</span></span>                  | <span data-ttu-id="3c3ce-188">System .net. mail. mail-adress</span><span class="sxs-lookup"><span data-stu-id="3c3ce-188">System.Net.Mail.MailAddress</span></span>                                         |
|<span data-ttu-id="3c3ce-189">NullString</span><span class="sxs-lookup"><span data-stu-id="3c3ce-189">NullString</span></span>                   | <span data-ttu-id="3c3ce-190">System. Management. Automation. language. NullString</span><span class="sxs-lookup"><span data-stu-id="3c3ce-190">System.Management.Automation.Language.NullString</span></span>                    |
|<span data-ttu-id="3c3ce-191">ObjectSecurity</span><span class="sxs-lookup"><span data-stu-id="3c3ce-191">ObjectSecurity</span></span>               | <span data-ttu-id="3c3ce-192">System. Security. AccessControl. ObjectSecurity</span><span class="sxs-lookup"><span data-stu-id="3c3ce-192">System.Security.AccessControl.ObjectSecurity</span></span>                        |
|<span data-ttu-id="3c3ce-193">OutputType</span><span class="sxs-lookup"><span data-stu-id="3c3ce-193">OutputType</span></span>                   | <span data-ttu-id="3c3ce-194">System. Management. Automation. OutputTypeAttribute</span><span class="sxs-lookup"><span data-stu-id="3c3ce-194">System.Management.Automation.OutputTypeAttribute</span></span>                    |
|<span data-ttu-id="3c3ce-195">Parameter</span><span class="sxs-lookup"><span data-stu-id="3c3ce-195">Parameter</span></span>                    | <span data-ttu-id="3c3ce-196">System. Management. Automation. ParameterAttribute</span><span class="sxs-lookup"><span data-stu-id="3c3ce-196">System.Management.Automation.ParameterAttribute</span></span>                     |
|<span data-ttu-id="3c3ce-197">PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="3c3ce-197">PhysicalAddress</span></span>              | <span data-ttu-id="3c3ce-198">System .net. NetworkInformation. PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="3c3ce-198">System.Net.NetworkInformation.PhysicalAddress</span></span>                       |
|<span data-ttu-id="3c3ce-199">powershell</span><span class="sxs-lookup"><span data-stu-id="3c3ce-199">powershell</span></span>                   | <span data-ttu-id="3c3ce-200">System. Management. Automation. PowerShell</span><span class="sxs-lookup"><span data-stu-id="3c3ce-200">System.Management.Automation.PowerShell</span></span>                             |
|<span data-ttu-id="3c3ce-201">psaliasproperty</span><span class="sxs-lookup"><span data-stu-id="3c3ce-201">psaliasproperty</span></span>              | <span data-ttu-id="3c3ce-202">System. Management. Automation. PSAliasProperty</span><span class="sxs-lookup"><span data-stu-id="3c3ce-202">System.Management.Automation.PSAliasProperty</span></span>                        |
|<span data-ttu-id="3c3ce-203">PSCredential</span><span class="sxs-lookup"><span data-stu-id="3c3ce-203">pscredential</span></span>                 | <span data-ttu-id="3c3ce-204">System. Management. Automation. PSCredential</span><span class="sxs-lookup"><span data-stu-id="3c3ce-204">System.Management.Automation.PSCredential</span></span>                           |
|<span data-ttu-id="3c3ce-205">PSCustomObject</span><span class="sxs-lookup"><span data-stu-id="3c3ce-205">pscustomobject</span></span>               | <span data-ttu-id="3c3ce-206">System. Management. Automation. PSObject</span><span class="sxs-lookup"><span data-stu-id="3c3ce-206">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="3c3ce-207">PSDefaultValue</span><span class="sxs-lookup"><span data-stu-id="3c3ce-207">PSDefaultValue</span></span>               | <span data-ttu-id="3c3ce-208">System.Management.Automation.PSDefaultValueAttribute</span><span class="sxs-lookup"><span data-stu-id="3c3ce-208">System.Management.Automation.PSDefaultValueAttribute</span></span>                |
|<span data-ttu-id="3c3ce-209">pslistmodifier</span><span class="sxs-lookup"><span data-stu-id="3c3ce-209">pslistmodifier</span></span>               | <span data-ttu-id="3c3ce-210">System. Management. Automation. PSListModifier</span><span class="sxs-lookup"><span data-stu-id="3c3ce-210">System.Management.Automation.PSListModifier</span></span>                         |
|<span data-ttu-id="3c3ce-211">psmoduleinfo</span><span class="sxs-lookup"><span data-stu-id="3c3ce-211">psmoduleinfo</span></span>                 | <span data-ttu-id="3c3ce-212">System. Management. Automation. PSModuleInfo</span><span class="sxs-lookup"><span data-stu-id="3c3ce-212">System.Management.Automation.PSModuleInfo</span></span>                           |
|<span data-ttu-id="3c3ce-213">psnoteproperty</span><span class="sxs-lookup"><span data-stu-id="3c3ce-213">psnoteproperty</span></span>               | <span data-ttu-id="3c3ce-214">System. Management. Automation. PSNoteProperty</span><span class="sxs-lookup"><span data-stu-id="3c3ce-214">System.Management.Automation.PSNoteProperty</span></span>                         |
|<span data-ttu-id="3c3ce-215">psobject</span><span class="sxs-lookup"><span data-stu-id="3c3ce-215">psobject</span></span>                     | <span data-ttu-id="3c3ce-216">System. Management. Automation. PSObject</span><span class="sxs-lookup"><span data-stu-id="3c3ce-216">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="3c3ce-217">psprimitivedictionary</span><span class="sxs-lookup"><span data-stu-id="3c3ce-217">psprimitivedictionary</span></span>        | <span data-ttu-id="3c3ce-218">System. Management. Automation. PSPrimitiveDictionary</span><span class="sxs-lookup"><span data-stu-id="3c3ce-218">System.Management.Automation.PSPrimitiveDictionary</span></span>                  |
|<span data-ttu-id="3c3ce-219">psscriptmethod</span><span class="sxs-lookup"><span data-stu-id="3c3ce-219">psscriptmethod</span></span>               | <span data-ttu-id="3c3ce-220">System. Management. Automation. PSScriptMethod</span><span class="sxs-lookup"><span data-stu-id="3c3ce-220">System.Management.Automation.PSScriptMethod</span></span>                         |
|<span data-ttu-id="3c3ce-221">psscriptproperty</span><span class="sxs-lookup"><span data-stu-id="3c3ce-221">psscriptproperty</span></span>             | <span data-ttu-id="3c3ce-222">System. Management. Automation. PSScriptProperty</span><span class="sxs-lookup"><span data-stu-id="3c3ce-222">System.Management.Automation.PSScriptProperty</span></span>                       |
|<span data-ttu-id="3c3ce-223">PSTypeNameAttribute</span><span class="sxs-lookup"><span data-stu-id="3c3ce-223">PSTypeNameAttribute</span></span>          | <span data-ttu-id="3c3ce-224">System. Management. Automation. PSTypeNameAttribute</span><span class="sxs-lookup"><span data-stu-id="3c3ce-224">System.Management.Automation.PSTypeNameAttribute</span></span>                    |
|<span data-ttu-id="3c3ce-225">psvariable</span><span class="sxs-lookup"><span data-stu-id="3c3ce-225">psvariable</span></span>                   | <span data-ttu-id="3c3ce-226">System. Management. Automation. PSVariable</span><span class="sxs-lookup"><span data-stu-id="3c3ce-226">System.Management.Automation.PSVariable</span></span>                             |
|<span data-ttu-id="3c3ce-227">psvariableproperty</span><span class="sxs-lookup"><span data-stu-id="3c3ce-227">psvariableproperty</span></span>           | <span data-ttu-id="3c3ce-228">System. Management. Automation. PSVariableProperty</span><span class="sxs-lookup"><span data-stu-id="3c3ce-228">System.Management.Automation.PSVariableProperty</span></span>                     |
|<span data-ttu-id="3c3ce-229">Ref</span><span class="sxs-lookup"><span data-stu-id="3c3ce-229">ref</span></span>                          | <span data-ttu-id="3c3ce-230">System. Management. Automation. PSReference</span><span class="sxs-lookup"><span data-stu-id="3c3ce-230">System.Management.Automation.PSReference</span></span>                            |
|<span data-ttu-id="3c3ce-231">verifiering</span><span class="sxs-lookup"><span data-stu-id="3c3ce-231">regex</span></span>                        | <span data-ttu-id="3c3ce-232">System. text. RegularExpressions. regex</span><span class="sxs-lookup"><span data-stu-id="3c3ce-232">System.Text.RegularExpressions.Regex</span></span>                                |
|<span data-ttu-id="3c3ce-233">körnings utrymme</span><span class="sxs-lookup"><span data-stu-id="3c3ce-233">runspace</span></span>                     | <span data-ttu-id="3c3ce-234">System. Management. Automation. körnings utrymmen. körnings utrymme</span><span class="sxs-lookup"><span data-stu-id="3c3ce-234">System.Management.Automation.Runspaces.Runspace</span></span>                     |
|<span data-ttu-id="3c3ce-235">runspacefactory</span><span class="sxs-lookup"><span data-stu-id="3c3ce-235">runspacefactory</span></span>              | <span data-ttu-id="3c3ce-236">System. Management. Automation. körnings utrymmen. RunspaceFactory</span><span class="sxs-lookup"><span data-stu-id="3c3ce-236">System.Management.Automation.Runspaces.RunspaceFactory</span></span>              |
|<span data-ttu-id="3c3ce-237">SByte</span><span class="sxs-lookup"><span data-stu-id="3c3ce-237">sbyte</span></span>                        | <span data-ttu-id="3c3ce-238">System. SByte</span><span class="sxs-lookup"><span data-stu-id="3c3ce-238">System.SByte</span></span>                                                        |
|<span data-ttu-id="3c3ce-239">script block</span><span class="sxs-lookup"><span data-stu-id="3c3ce-239">scriptblock</span></span>                  | <span data-ttu-id="3c3ce-240">System. Management. Automation. script block</span><span class="sxs-lookup"><span data-stu-id="3c3ce-240">System.Management.Automation.ScriptBlock</span></span>                            |
|<span data-ttu-id="3c3ce-241">SecureString</span><span class="sxs-lookup"><span data-stu-id="3c3ce-241">securestring</span></span>                 | <span data-ttu-id="3c3ce-242">System. Security. SecureString</span><span class="sxs-lookup"><span data-stu-id="3c3ce-242">System.Security.SecureString</span></span>                                        |
|<span data-ttu-id="3c3ce-243">samma</span><span class="sxs-lookup"><span data-stu-id="3c3ce-243">single</span></span>                       | <span data-ttu-id="3c3ce-244">System. Single</span><span class="sxs-lookup"><span data-stu-id="3c3ce-244">System.Single</span></span>                                                       |
|<span data-ttu-id="3c3ce-245">sträng</span><span class="sxs-lookup"><span data-stu-id="3c3ce-245">string</span></span>                       | <span data-ttu-id="3c3ce-246">System. String</span><span class="sxs-lookup"><span data-stu-id="3c3ce-246">System.String</span></span>                                                       |
|<span data-ttu-id="3c3ce-247">SupportsWildcards</span><span class="sxs-lookup"><span data-stu-id="3c3ce-247">SupportsWildcards</span></span>            | <span data-ttu-id="3c3ce-248">System. Management. Automation. SupportsWildcardsAttribute</span><span class="sxs-lookup"><span data-stu-id="3c3ce-248">System.Management.Automation.SupportsWildcardsAttribute</span></span>             |
|<span data-ttu-id="3c3ce-249">växla</span><span class="sxs-lookup"><span data-stu-id="3c3ce-249">switch</span></span>                       | <span data-ttu-id="3c3ce-250">System. Management. Automation. SwitchParameter</span><span class="sxs-lookup"><span data-stu-id="3c3ce-250">System.Management.Automation.SwitchParameter</span></span>                        |
|<span data-ttu-id="3c3ce-251">tidsintervall</span><span class="sxs-lookup"><span data-stu-id="3c3ce-251">timespan</span></span>                     | <span data-ttu-id="3c3ce-252">System. TimeSpan</span><span class="sxs-lookup"><span data-stu-id="3c3ce-252">System.TimeSpan</span></span>                                                     |
|<span data-ttu-id="3c3ce-253">typ</span><span class="sxs-lookup"><span data-stu-id="3c3ce-253">type</span></span>                         | <span data-ttu-id="3c3ce-254">System. Type</span><span class="sxs-lookup"><span data-stu-id="3c3ce-254">System.Type</span></span>                                                         |
|<span data-ttu-id="3c3ce-255">UInt16</span><span class="sxs-lookup"><span data-stu-id="3c3ce-255">uint16</span></span>                       | <span data-ttu-id="3c3ce-256">System. UInt16</span><span class="sxs-lookup"><span data-stu-id="3c3ce-256">System.UInt16</span></span>                                                       |
|<span data-ttu-id="3c3ce-257">UInt32</span><span class="sxs-lookup"><span data-stu-id="3c3ce-257">uint32</span></span>                       | <span data-ttu-id="3c3ce-258">System. UInt32</span><span class="sxs-lookup"><span data-stu-id="3c3ce-258">System.UInt32</span></span>                                                       |
|<span data-ttu-id="3c3ce-259">UInt64</span><span class="sxs-lookup"><span data-stu-id="3c3ce-259">uint64</span></span>                       | <span data-ttu-id="3c3ce-260">System. UInt64</span><span class="sxs-lookup"><span data-stu-id="3c3ce-260">System.UInt64</span></span>                                                       |
|<span data-ttu-id="3c3ce-261">URI</span><span class="sxs-lookup"><span data-stu-id="3c3ce-261">uri</span></span>                          | <span data-ttu-id="3c3ce-262">System. URI</span><span class="sxs-lookup"><span data-stu-id="3c3ce-262">System.Uri</span></span>                                                          |
|<span data-ttu-id="3c3ce-263">ValidateCount</span><span class="sxs-lookup"><span data-stu-id="3c3ce-263">ValidateCount</span></span>                | <span data-ttu-id="3c3ce-264">System. Management. Automation. ValidateCountAttribute</span><span class="sxs-lookup"><span data-stu-id="3c3ce-264">System.Management.Automation.ValidateCountAttribute</span></span>                 |
|<span data-ttu-id="3c3ce-265">ValidateDrive</span><span class="sxs-lookup"><span data-stu-id="3c3ce-265">ValidateDrive</span></span>                | <span data-ttu-id="3c3ce-266">System. Management. Automation. ValidateDriveAttribute</span><span class="sxs-lookup"><span data-stu-id="3c3ce-266">System.Management.Automation.ValidateDriveAttribute</span></span>                 |
|<span data-ttu-id="3c3ce-267">ValidateLength</span><span class="sxs-lookup"><span data-stu-id="3c3ce-267">ValidateLength</span></span>               | <span data-ttu-id="3c3ce-268">System. Management. Automation. ValidateLengthAttribute</span><span class="sxs-lookup"><span data-stu-id="3c3ce-268">System.Management.Automation.ValidateLengthAttribute</span></span>                |
|<span data-ttu-id="3c3ce-269">ValidateNotNull</span><span class="sxs-lookup"><span data-stu-id="3c3ce-269">ValidateNotNull</span></span>              | <span data-ttu-id="3c3ce-270">System. Management. Automation. ValidateNotNullAttribute</span><span class="sxs-lookup"><span data-stu-id="3c3ce-270">System.Management.Automation.ValidateNotNullAttribute</span></span>               |
|<span data-ttu-id="3c3ce-271">ValidateNotNullOrEmpty</span><span class="sxs-lookup"><span data-stu-id="3c3ce-271">ValidateNotNullOrEmpty</span></span>       | <span data-ttu-id="3c3ce-272">System. Management. Automation. ValidateNotNullOrEmptyAttribute</span><span class="sxs-lookup"><span data-stu-id="3c3ce-272">System.Management.Automation.ValidateNotNullOrEmptyAttribute</span></span>        |
|<span data-ttu-id="3c3ce-273">ValidatePattern</span><span class="sxs-lookup"><span data-stu-id="3c3ce-273">ValidatePattern</span></span>              | <span data-ttu-id="3c3ce-274">System. Management. Automation. ValidatePatternAttribute</span><span class="sxs-lookup"><span data-stu-id="3c3ce-274">System.Management.Automation.ValidatePatternAttribute</span></span>               |
|<span data-ttu-id="3c3ce-275">ValidateRange</span><span class="sxs-lookup"><span data-stu-id="3c3ce-275">ValidateRange</span></span>                | <span data-ttu-id="3c3ce-276">System. Management. Automation. ValidateRangeAttribute</span><span class="sxs-lookup"><span data-stu-id="3c3ce-276">System.Management.Automation.ValidateRangeAttribute</span></span>                 |
|<span data-ttu-id="3c3ce-277">ValidateScript</span><span class="sxs-lookup"><span data-stu-id="3c3ce-277">ValidateScript</span></span>               | <span data-ttu-id="3c3ce-278">System. Management. Automation. ValidateScriptAttribute</span><span class="sxs-lookup"><span data-stu-id="3c3ce-278">System.Management.Automation.ValidateScriptAttribute</span></span>                |
|<span data-ttu-id="3c3ce-279">ValidateSet</span><span class="sxs-lookup"><span data-stu-id="3c3ce-279">ValidateSet</span></span>                  | <span data-ttu-id="3c3ce-280">System. Management. Automation. ValidateSetAttribute</span><span class="sxs-lookup"><span data-stu-id="3c3ce-280">System.Management.Automation.ValidateSetAttribute</span></span>                   |
|<span data-ttu-id="3c3ce-281">ValidateTrustedData</span><span class="sxs-lookup"><span data-stu-id="3c3ce-281">ValidateTrustedData</span></span>          | <span data-ttu-id="3c3ce-282">System. Management. Automation. ValidateTrustedDataAttribute</span><span class="sxs-lookup"><span data-stu-id="3c3ce-282">System.Management.Automation.ValidateTrustedDataAttribute</span></span>           |
|<span data-ttu-id="3c3ce-283">ValidateUserDrive</span><span class="sxs-lookup"><span data-stu-id="3c3ce-283">ValidateUserDrive</span></span>            | <span data-ttu-id="3c3ce-284">System. Management. Automation. ValidateUserDriveAttribute</span><span class="sxs-lookup"><span data-stu-id="3c3ce-284">System.Management.Automation.ValidateUserDriveAttribute</span></span>             |
|<span data-ttu-id="3c3ce-285">version</span><span class="sxs-lookup"><span data-stu-id="3c3ce-285">version</span></span>                      | <span data-ttu-id="3c3ce-286">System. version</span><span class="sxs-lookup"><span data-stu-id="3c3ce-286">System.Version</span></span>                                                      |
|<span data-ttu-id="3c3ce-287">void</span><span class="sxs-lookup"><span data-stu-id="3c3ce-287">void</span></span>                         | <span data-ttu-id="3c3ce-288">System. Void</span><span class="sxs-lookup"><span data-stu-id="3c3ce-288">System.Void</span></span>                                                         |
|<span data-ttu-id="3c3ce-289">WildcardPattern</span><span class="sxs-lookup"><span data-stu-id="3c3ce-289">WildcardPattern</span></span>              | <span data-ttu-id="3c3ce-290">System. Management. Automation. WildcardPattern</span><span class="sxs-lookup"><span data-stu-id="3c3ce-290">System.Management.Automation.WildcardPattern</span></span>                        |
|<span data-ttu-id="3c3ce-291">tjänst</span><span class="sxs-lookup"><span data-stu-id="3c3ce-291">wmi</span></span>                          | <span data-ttu-id="3c3ce-292">System. Management. ManagementObject</span><span class="sxs-lookup"><span data-stu-id="3c3ce-292">System.Management.ManagementObject</span></span>                                  |
|<span data-ttu-id="3c3ce-293">wmiclass</span><span class="sxs-lookup"><span data-stu-id="3c3ce-293">wmiclass</span></span>                     | <span data-ttu-id="3c3ce-294">System. Management. ManagementClass</span><span class="sxs-lookup"><span data-stu-id="3c3ce-294">System.Management.ManagementClass</span></span>                                   |
|<span data-ttu-id="3c3ce-295">wmisearcher</span><span class="sxs-lookup"><span data-stu-id="3c3ce-295">wmisearcher</span></span>                  | <span data-ttu-id="3c3ce-296">System. Management. ManagementObjectSearcher</span><span class="sxs-lookup"><span data-stu-id="3c3ce-296">System.Management.ManagementObjectSearcher</span></span>                          |
|<span data-ttu-id="3c3ce-297">X500DistinguishedName</span><span class="sxs-lookup"><span data-stu-id="3c3ce-297">X500DistinguishedName</span></span>        | <span data-ttu-id="3c3ce-298">System. Security. Cryptography. X509Certificates. X500DistinguishedName</span><span class="sxs-lookup"><span data-stu-id="3c3ce-298">System.Security.Cryptography.X509Certificates.X500DistinguishedName</span></span> |
|<span data-ttu-id="3c3ce-299">X509Certificate</span><span class="sxs-lookup"><span data-stu-id="3c3ce-299">X509Certificate</span></span>              | <span data-ttu-id="3c3ce-300">System. Security. Cryptography. X509Certificates. X509Certificate</span><span class="sxs-lookup"><span data-stu-id="3c3ce-300">System.Security.Cryptography.X509Certificates.X509Certificate</span></span>       |
|<span data-ttu-id="3c3ce-301">xml</span><span class="sxs-lookup"><span data-stu-id="3c3ce-301">xml</span></span>                          | <span data-ttu-id="3c3ce-302">System.Xml.Xmldokument</span><span class="sxs-lookup"><span data-stu-id="3c3ce-302">System.Xml.XmlDocument</span></span>                                              |
