reference/7.0/Microsoft.PowerShell.Core/About/about_Type_Accelerators.md
---
description: Beskriver de typ acceleratorer som är tillgängliga för .NET Framework-klasser
keywords: powershell,cmdlet
Locale: en-US
ms.date: 05/01/2020
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.core/about/about_type_accelerators?view=powershell-7&WT.mc_id=ps-gethelp
schema: 2.0.0
title: about_Type_Accelerators
ms.openlocfilehash: 6f73aa590b64cda5739a2a118b2b4c5a6c103a67
ms.sourcegitcommit: f874dc1d4236e06a3df195d179f59e0a7d9f8436
ms.translationtype: MT
ms.contentlocale: sv-SE
ms.lasthandoff: 10/13/2020
ms.locfileid: "93270248"
---
# <a name="about-type-accelerators"></a><span data-ttu-id="316ea-104">Om typ acceleratorer</span><span class="sxs-lookup"><span data-stu-id="316ea-104">About Type Accelerators</span></span>

## <a name="short-desription"></a><span data-ttu-id="316ea-105">KORT BESKRIVNING</span><span class="sxs-lookup"><span data-stu-id="316ea-105">SHORT DESRIPTION</span></span>
<span data-ttu-id="316ea-106">Beskriver de typ acceleratorer som är tillgängliga för .NET Framework-klasser</span><span class="sxs-lookup"><span data-stu-id="316ea-106">Describes the Type accelerators available for .NET framework classes</span></span>

## <a name="long-description"></a><span data-ttu-id="316ea-107">LÅNG BESKRIVNING</span><span class="sxs-lookup"><span data-stu-id="316ea-107">LONG DESCRIPTION</span></span>

<span data-ttu-id="316ea-108">Typ acceleratorer är alias för .NET Framework-klasser.</span><span class="sxs-lookup"><span data-stu-id="316ea-108">Type accelerators are aliases for .NET framework classes.</span></span> <span data-ttu-id="316ea-109">De gör att du kan komma åt vissa .NET Framework-klasser utan att uttryckligen ange hela klass namnet.</span><span class="sxs-lookup"><span data-stu-id="316ea-109">They allow you to access specific .NET framework classes without having to explicitly type the entire class name.</span></span> <span data-ttu-id="316ea-110">Du kan till exempel förkorta klassen **AliasAttribute** från `[System.Management.Automation.AliasAttribute]` till `[Alias]` .</span><span class="sxs-lookup"><span data-stu-id="316ea-110">For example, you can shorten the **AliasAttribute** class from `[System.Management.Automation.AliasAttribute]` to `[Alias]`.</span></span>

> [!NOTE]
> <span data-ttu-id="316ea-111">Alla typ acceleratorer måste fortfarande omslutas med hakparenteser ( `[]` ).</span><span class="sxs-lookup"><span data-stu-id="316ea-111">All type accelerators still need to be wrapped in square brackets(`[]`).</span></span>

## <a name="available-type-accelerators"></a><span data-ttu-id="316ea-112">Tillgängliga typ acceleratorer</span><span class="sxs-lookup"><span data-stu-id="316ea-112">Available Type Accelerators</span></span>

|        <span data-ttu-id="316ea-113">Gas</span><span class="sxs-lookup"><span data-stu-id="316ea-113">Accelerator</span></span>          |                           <span data-ttu-id="316ea-114">Fullständigt klass namn</span><span class="sxs-lookup"><span data-stu-id="316ea-114">Full Class Name</span></span>                           |
|---------------------------- | ------------------------------------------------------------------- |
|<span data-ttu-id="316ea-115">ADSI</span><span class="sxs-lookup"><span data-stu-id="316ea-115">adsi</span></span>                         | <span data-ttu-id="316ea-116">System. DirectoryServices. DirectoryEntry</span><span class="sxs-lookup"><span data-stu-id="316ea-116">System.DirectoryServices.DirectoryEntry</span></span>                             |
|<span data-ttu-id="316ea-117">adsisearcher</span><span class="sxs-lookup"><span data-stu-id="316ea-117">adsisearcher</span></span>                 | <span data-ttu-id="316ea-118">System. DirectoryServices. DirectorySearcher</span><span class="sxs-lookup"><span data-stu-id="316ea-118">System.DirectoryServices.DirectorySearcher</span></span>                          |
|<span data-ttu-id="316ea-119">Alias</span><span class="sxs-lookup"><span data-stu-id="316ea-119">Alias</span></span>                        | <span data-ttu-id="316ea-120">System. Management. Automation. AliasAttribute</span><span class="sxs-lookup"><span data-stu-id="316ea-120">System.Management.Automation.AliasAttribute</span></span>                         |
|<span data-ttu-id="316ea-121">AllowEmptyCollection</span><span class="sxs-lookup"><span data-stu-id="316ea-121">AllowEmptyCollection</span></span>         | <span data-ttu-id="316ea-122">System. Management. Automation. AllowEmptyCollectionAttribute</span><span class="sxs-lookup"><span data-stu-id="316ea-122">System.Management.Automation.AllowEmptyCollectionAttribute</span></span>          |
|<span data-ttu-id="316ea-123">AllowEmptyString</span><span class="sxs-lookup"><span data-stu-id="316ea-123">AllowEmptyString</span></span>             | <span data-ttu-id="316ea-124">System. Management. Automation. AllowEmptyStringAttribute</span><span class="sxs-lookup"><span data-stu-id="316ea-124">System.Management.Automation.AllowEmptyStringAttribute</span></span>              |
|<span data-ttu-id="316ea-125">AllowNull</span><span class="sxs-lookup"><span data-stu-id="316ea-125">AllowNull</span></span>                    | <span data-ttu-id="316ea-126">System. Management. Automation. AllowNullAttribute</span><span class="sxs-lookup"><span data-stu-id="316ea-126">System.Management.Automation.AllowNullAttribute</span></span>                     |
|<span data-ttu-id="316ea-127">ArgumentCompleter</span><span class="sxs-lookup"><span data-stu-id="316ea-127">ArgumentCompleter</span></span>            | <span data-ttu-id="316ea-128">System. Management. Automation. ArgumentCompleterAttribute</span><span class="sxs-lookup"><span data-stu-id="316ea-128">System.Management.Automation.ArgumentCompleterAttribute</span></span>             |
|<span data-ttu-id="316ea-129">ArgumentCompletions</span><span class="sxs-lookup"><span data-stu-id="316ea-129">ArgumentCompletions</span></span>          | <span data-ttu-id="316ea-130">System. Management. Automation. ArgumentCompletionsAttribute</span><span class="sxs-lookup"><span data-stu-id="316ea-130">System.Management.Automation.ArgumentCompletionsAttribute</span></span>           |
|<span data-ttu-id="316ea-131">matris</span><span class="sxs-lookup"><span data-stu-id="316ea-131">array</span></span>                        | <span data-ttu-id="316ea-132">System. array</span><span class="sxs-lookup"><span data-stu-id="316ea-132">System.Array</span></span>                                                        |
|<span data-ttu-id="316ea-133">bigint</span><span class="sxs-lookup"><span data-stu-id="316ea-133">bigint</span></span>                       | <span data-ttu-id="316ea-134">System. Numerics. BigInteger</span><span class="sxs-lookup"><span data-stu-id="316ea-134">System.Numerics.BigInteger</span></span>                                          |
|<span data-ttu-id="316ea-135">boolesk</span><span class="sxs-lookup"><span data-stu-id="316ea-135">bool</span></span>                         | <span data-ttu-id="316ea-136">System. Boolean</span><span class="sxs-lookup"><span data-stu-id="316ea-136">System.Boolean</span></span>                                                      |
|<span data-ttu-id="316ea-137">stor</span><span class="sxs-lookup"><span data-stu-id="316ea-137">byte</span></span>                         | <span data-ttu-id="316ea-138">System. byte</span><span class="sxs-lookup"><span data-stu-id="316ea-138">System.Byte</span></span>                                                         |
|<span data-ttu-id="316ea-139">char</span><span class="sxs-lookup"><span data-stu-id="316ea-139">char</span></span>                         | <span data-ttu-id="316ea-140">System. char</span><span class="sxs-lookup"><span data-stu-id="316ea-140">System.Char</span></span>                                                         |
|<span data-ttu-id="316ea-141">cimclass</span><span class="sxs-lookup"><span data-stu-id="316ea-141">cimclass</span></span>                     | <span data-ttu-id="316ea-142">Microsoft. Management. Infrastructure. CimClass</span><span class="sxs-lookup"><span data-stu-id="316ea-142">Microsoft.Management.Infrastructure.CimClass</span></span>                        |
|<span data-ttu-id="316ea-143">cimconverter</span><span class="sxs-lookup"><span data-stu-id="316ea-143">cimconverter</span></span>                 | <span data-ttu-id="316ea-144">Microsoft. Management. Infrastructure. CimConverter</span><span class="sxs-lookup"><span data-stu-id="316ea-144">Microsoft.Management.Infrastructure.CimConverter</span></span>                    |
|<span data-ttu-id="316ea-145">ciminstance</span><span class="sxs-lookup"><span data-stu-id="316ea-145">ciminstance</span></span>                  | <span data-ttu-id="316ea-146">Microsoft. Management. Infrastructure. CimInstance</span><span class="sxs-lookup"><span data-stu-id="316ea-146">Microsoft.Management.Infrastructure.CimInstance</span></span>                     |
|<span data-ttu-id="316ea-147">CimSession</span><span class="sxs-lookup"><span data-stu-id="316ea-147">CimSession</span></span>                   | <span data-ttu-id="316ea-148">Microsoft. Management. Infrastructure. CimSession</span><span class="sxs-lookup"><span data-stu-id="316ea-148">Microsoft.Management.Infrastructure.CimSession</span></span>                      |
|<span data-ttu-id="316ea-149">cimtype</span><span class="sxs-lookup"><span data-stu-id="316ea-149">cimtype</span></span>                      | <span data-ttu-id="316ea-150">Microsoft. Management. Infrastructure. CimType</span><span class="sxs-lookup"><span data-stu-id="316ea-150">Microsoft.Management.Infrastructure.CimType</span></span>                         |
|<span data-ttu-id="316ea-151">CmdletBinding</span><span class="sxs-lookup"><span data-stu-id="316ea-151">CmdletBinding</span></span>                | <span data-ttu-id="316ea-152">System. Management. Automation. CmdletBindingAttribute</span><span class="sxs-lookup"><span data-stu-id="316ea-152">System.Management.Automation.CmdletBindingAttribute</span></span>                 |
|<span data-ttu-id="316ea-153">CultureInfo</span><span class="sxs-lookup"><span data-stu-id="316ea-153">cultureinfo</span></span>                  | <span data-ttu-id="316ea-154">System. globalisering. CultureInfo</span><span class="sxs-lookup"><span data-stu-id="316ea-154">System.Globalization.CultureInfo</span></span>                                    |
|<span data-ttu-id="316ea-155">datetime</span><span class="sxs-lookup"><span data-stu-id="316ea-155">datetime</span></span>                     | <span data-ttu-id="316ea-156">System. DateTime</span><span class="sxs-lookup"><span data-stu-id="316ea-156">System.DateTime</span></span>                                                     |
|<span data-ttu-id="316ea-157">decimal</span><span class="sxs-lookup"><span data-stu-id="316ea-157">decimal</span></span>                      | <span data-ttu-id="316ea-158">System. decimal</span><span class="sxs-lookup"><span data-stu-id="316ea-158">System.Decimal</span></span>                                                      |
|<span data-ttu-id="316ea-159">double</span><span class="sxs-lookup"><span data-stu-id="316ea-159">double</span></span>                       | <span data-ttu-id="316ea-160">System. Double</span><span class="sxs-lookup"><span data-stu-id="316ea-160">System.Double</span></span>                                                       |
|<span data-ttu-id="316ea-161">DscLocalConfigurationManager</span><span class="sxs-lookup"><span data-stu-id="316ea-161">DscLocalConfigurationManager</span></span> | <span data-ttu-id="316ea-162">System. Management. Automation. DscLocalConfigurationManagerAttribute</span><span class="sxs-lookup"><span data-stu-id="316ea-162">System.Management.Automation.DscLocalConfigurationManagerAttribute</span></span>  |
|<span data-ttu-id="316ea-163">DscProperty</span><span class="sxs-lookup"><span data-stu-id="316ea-163">DscProperty</span></span>                  | <span data-ttu-id="316ea-164">System. Management. Automation. DscPropertyAttribute</span><span class="sxs-lookup"><span data-stu-id="316ea-164">System.Management.Automation.DscPropertyAttribute</span></span>                   |
|<span data-ttu-id="316ea-165">Dscresource Keyword Supports</span><span class="sxs-lookup"><span data-stu-id="316ea-165">DscResource</span></span>                  | <span data-ttu-id="316ea-166">System. Management. Automation. DscResourceAttribute</span><span class="sxs-lookup"><span data-stu-id="316ea-166">System.Management.Automation.DscResourceAttribute</span></span>                   |
|<span data-ttu-id="316ea-167">ExperimentAction</span><span class="sxs-lookup"><span data-stu-id="316ea-167">ExperimentAction</span></span>             | <span data-ttu-id="316ea-168">System. Management. Automation. ExperimentAction</span><span class="sxs-lookup"><span data-stu-id="316ea-168">System.Management.Automation.ExperimentAction</span></span>                       |
|<span data-ttu-id="316ea-169">Experimentell</span><span class="sxs-lookup"><span data-stu-id="316ea-169">Experimental</span></span>                 | <span data-ttu-id="316ea-170">System. Management. Automation. ExperimentalAttribute</span><span class="sxs-lookup"><span data-stu-id="316ea-170">System.Management.Automation.ExperimentalAttribute</span></span>                  |
|<span data-ttu-id="316ea-171">ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="316ea-171">ExperimentalFeature</span></span>          | <span data-ttu-id="316ea-172">System. Management. Automation. ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="316ea-172">System.Management.Automation.ExperimentalFeature</span></span>                    |
|<span data-ttu-id="316ea-173">flyt</span><span class="sxs-lookup"><span data-stu-id="316ea-173">float</span></span>                        | <span data-ttu-id="316ea-174">System. Single</span><span class="sxs-lookup"><span data-stu-id="316ea-174">System.Single</span></span>                                                       |
|<span data-ttu-id="316ea-175">guid</span><span class="sxs-lookup"><span data-stu-id="316ea-175">guid</span></span>                         | <span data-ttu-id="316ea-176">System. GUID</span><span class="sxs-lookup"><span data-stu-id="316ea-176">System.Guid</span></span>                                                         |
|<span data-ttu-id="316ea-177">hash</span><span class="sxs-lookup"><span data-stu-id="316ea-177">hashtable</span></span>                    | <span data-ttu-id="316ea-178">System. Collections. hash</span><span class="sxs-lookup"><span data-stu-id="316ea-178">System.Collections.Hashtable</span></span>                                        |
|<span data-ttu-id="316ea-179">initialsessionstate</span><span class="sxs-lookup"><span data-stu-id="316ea-179">initialsessionstate</span></span>          | <span data-ttu-id="316ea-180">System.Management.Automation.Runspaces.InitialSessionState</span><span class="sxs-lookup"><span data-stu-id="316ea-180">System.Management.Automation.Runspaces.InitialSessionState</span></span>          |
|<span data-ttu-id="316ea-181">int</span><span class="sxs-lookup"><span data-stu-id="316ea-181">int</span></span>                          | <span data-ttu-id="316ea-182">System. Int32</span><span class="sxs-lookup"><span data-stu-id="316ea-182">System.Int32</span></span>                                                        |
|<span data-ttu-id="316ea-183">Int16</span><span class="sxs-lookup"><span data-stu-id="316ea-183">int16</span></span>                        | <span data-ttu-id="316ea-184">System. Int16</span><span class="sxs-lookup"><span data-stu-id="316ea-184">System.Int16</span></span>                                                        |
|<span data-ttu-id="316ea-185">Int32</span><span class="sxs-lookup"><span data-stu-id="316ea-185">int32</span></span>                        | <span data-ttu-id="316ea-186">System. Int32</span><span class="sxs-lookup"><span data-stu-id="316ea-186">System.Int32</span></span>                                                        |
|<span data-ttu-id="316ea-187">Int64</span><span class="sxs-lookup"><span data-stu-id="316ea-187">int64</span></span>                        | <span data-ttu-id="316ea-188">System. Int64</span><span class="sxs-lookup"><span data-stu-id="316ea-188">System.Int64</span></span>                                                        |
|<span data-ttu-id="316ea-189">adresser</span><span class="sxs-lookup"><span data-stu-id="316ea-189">ipaddress</span></span>                    | <span data-ttu-id="316ea-190">System .net. IPAddress</span><span class="sxs-lookup"><span data-stu-id="316ea-190">System.Net.IPAddress</span></span>                                                |
|<span data-ttu-id="316ea-191">IPEndpoint</span><span class="sxs-lookup"><span data-stu-id="316ea-191">IPEndpoint</span></span>                   | <span data-ttu-id="316ea-192">System .net. IPEndPoint</span><span class="sxs-lookup"><span data-stu-id="316ea-192">System.Net.IPEndPoint</span></span>                                               |
|<span data-ttu-id="316ea-193">long</span><span class="sxs-lookup"><span data-stu-id="316ea-193">long</span></span>                         | <span data-ttu-id="316ea-194">System. Int64</span><span class="sxs-lookup"><span data-stu-id="316ea-194">System.Int64</span></span>                                                        |
|<span data-ttu-id="316ea-195">adress</span><span class="sxs-lookup"><span data-stu-id="316ea-195">mailaddress</span></span>                  | <span data-ttu-id="316ea-196">System .net. mail. mail-adress</span><span class="sxs-lookup"><span data-stu-id="316ea-196">System.Net.Mail.MailAddress</span></span>                                         |
|<span data-ttu-id="316ea-197">NullString</span><span class="sxs-lookup"><span data-stu-id="316ea-197">NullString</span></span>                   | <span data-ttu-id="316ea-198">System. Management. Automation. language. NullString</span><span class="sxs-lookup"><span data-stu-id="316ea-198">System.Management.Automation.Language.NullString</span></span>                    |
|<span data-ttu-id="316ea-199">ObjectSecurity</span><span class="sxs-lookup"><span data-stu-id="316ea-199">ObjectSecurity</span></span>               | <span data-ttu-id="316ea-200">System. Security. AccessControl. ObjectSecurity</span><span class="sxs-lookup"><span data-stu-id="316ea-200">System.Security.AccessControl.ObjectSecurity</span></span>                        |
|<span data-ttu-id="316ea-201">OutputType</span><span class="sxs-lookup"><span data-stu-id="316ea-201">OutputType</span></span>                   | <span data-ttu-id="316ea-202">System. Management. Automation. OutputTypeAttribute</span><span class="sxs-lookup"><span data-stu-id="316ea-202">System.Management.Automation.OutputTypeAttribute</span></span>                    |
|<span data-ttu-id="316ea-203">Parameter</span><span class="sxs-lookup"><span data-stu-id="316ea-203">Parameter</span></span>                    | <span data-ttu-id="316ea-204">System. Management. Automation. ParameterAttribute</span><span class="sxs-lookup"><span data-stu-id="316ea-204">System.Management.Automation.ParameterAttribute</span></span>                     |
|<span data-ttu-id="316ea-205">PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="316ea-205">PhysicalAddress</span></span>              | <span data-ttu-id="316ea-206">System .net. NetworkInformation. PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="316ea-206">System.Net.NetworkInformation.PhysicalAddress</span></span>                       |
|<span data-ttu-id="316ea-207">powershell</span><span class="sxs-lookup"><span data-stu-id="316ea-207">powershell</span></span>                   | <span data-ttu-id="316ea-208">System. Management. Automation. PowerShell</span><span class="sxs-lookup"><span data-stu-id="316ea-208">System.Management.Automation.PowerShell</span></span>                             |
|<span data-ttu-id="316ea-209">psaliasproperty</span><span class="sxs-lookup"><span data-stu-id="316ea-209">psaliasproperty</span></span>              | <span data-ttu-id="316ea-210">System. Management. Automation. PSAliasProperty</span><span class="sxs-lookup"><span data-stu-id="316ea-210">System.Management.Automation.PSAliasProperty</span></span>                        |
|<span data-ttu-id="316ea-211">PSCredential</span><span class="sxs-lookup"><span data-stu-id="316ea-211">pscredential</span></span>                 | <span data-ttu-id="316ea-212">System. Management. Automation. PSCredential</span><span class="sxs-lookup"><span data-stu-id="316ea-212">System.Management.Automation.PSCredential</span></span>                           |
|<span data-ttu-id="316ea-213">PSCustomObject</span><span class="sxs-lookup"><span data-stu-id="316ea-213">pscustomobject</span></span>               | <span data-ttu-id="316ea-214">System. Management. Automation. PSObject</span><span class="sxs-lookup"><span data-stu-id="316ea-214">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="316ea-215">PSDefaultValue</span><span class="sxs-lookup"><span data-stu-id="316ea-215">PSDefaultValue</span></span>               | <span data-ttu-id="316ea-216">System.Management.Automation.PSDefaultValueAttribute</span><span class="sxs-lookup"><span data-stu-id="316ea-216">System.Management.Automation.PSDefaultValueAttribute</span></span>                |
|<span data-ttu-id="316ea-217">pslistmodifier</span><span class="sxs-lookup"><span data-stu-id="316ea-217">pslistmodifier</span></span>               | <span data-ttu-id="316ea-218">System. Management. Automation. PSListModifier</span><span class="sxs-lookup"><span data-stu-id="316ea-218">System.Management.Automation.PSListModifier</span></span>                         |
|<span data-ttu-id="316ea-219">psmoduleinfo</span><span class="sxs-lookup"><span data-stu-id="316ea-219">psmoduleinfo</span></span>                 | <span data-ttu-id="316ea-220">System. Management. Automation. PSModuleInfo</span><span class="sxs-lookup"><span data-stu-id="316ea-220">System.Management.Automation.PSModuleInfo</span></span>                           |
|<span data-ttu-id="316ea-221">psnoteproperty</span><span class="sxs-lookup"><span data-stu-id="316ea-221">psnoteproperty</span></span>               | <span data-ttu-id="316ea-222">System. Management. Automation. PSNoteProperty</span><span class="sxs-lookup"><span data-stu-id="316ea-222">System.Management.Automation.PSNoteProperty</span></span>                         |
|<span data-ttu-id="316ea-223">psobject</span><span class="sxs-lookup"><span data-stu-id="316ea-223">psobject</span></span>                     | <span data-ttu-id="316ea-224">System. Management. Automation. PSObject</span><span class="sxs-lookup"><span data-stu-id="316ea-224">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="316ea-225">psprimitivedictionary</span><span class="sxs-lookup"><span data-stu-id="316ea-225">psprimitivedictionary</span></span>        | <span data-ttu-id="316ea-226">System. Management. Automation. PSPrimitiveDictionary</span><span class="sxs-lookup"><span data-stu-id="316ea-226">System.Management.Automation.PSPrimitiveDictionary</span></span>                  |
|<span data-ttu-id="316ea-227">pspropertyexpression</span><span class="sxs-lookup"><span data-stu-id="316ea-227">pspropertyexpression</span></span>         | <span data-ttu-id="316ea-228">Microsoft. PowerShell. commands. PSPropertyExpression</span><span class="sxs-lookup"><span data-stu-id="316ea-228">Microsoft.PowerShell.Commands.PSPropertyExpression</span></span>                  |
|<span data-ttu-id="316ea-229">psscriptmethod</span><span class="sxs-lookup"><span data-stu-id="316ea-229">psscriptmethod</span></span>               | <span data-ttu-id="316ea-230">System. Management. Automation. PSScriptMethod</span><span class="sxs-lookup"><span data-stu-id="316ea-230">System.Management.Automation.PSScriptMethod</span></span>                         |
|<span data-ttu-id="316ea-231">psscriptproperty</span><span class="sxs-lookup"><span data-stu-id="316ea-231">psscriptproperty</span></span>             | <span data-ttu-id="316ea-232">System. Management. Automation. PSScriptProperty</span><span class="sxs-lookup"><span data-stu-id="316ea-232">System.Management.Automation.PSScriptProperty</span></span>                       |
|<span data-ttu-id="316ea-233">PSTypeNameAttribute</span><span class="sxs-lookup"><span data-stu-id="316ea-233">PSTypeNameAttribute</span></span>          | <span data-ttu-id="316ea-234">System. Management. Automation. PSTypeNameAttribute</span><span class="sxs-lookup"><span data-stu-id="316ea-234">System.Management.Automation.PSTypeNameAttribute</span></span>                    |
|<span data-ttu-id="316ea-235">psvariable</span><span class="sxs-lookup"><span data-stu-id="316ea-235">psvariable</span></span>                   | <span data-ttu-id="316ea-236">System. Management. Automation. PSVariable</span><span class="sxs-lookup"><span data-stu-id="316ea-236">System.Management.Automation.PSVariable</span></span>                             |
|<span data-ttu-id="316ea-237">psvariableproperty</span><span class="sxs-lookup"><span data-stu-id="316ea-237">psvariableproperty</span></span>           | <span data-ttu-id="316ea-238">System. Management. Automation. PSVariableProperty</span><span class="sxs-lookup"><span data-stu-id="316ea-238">System.Management.Automation.PSVariableProperty</span></span>                     |
|<span data-ttu-id="316ea-239">Ref</span><span class="sxs-lookup"><span data-stu-id="316ea-239">ref</span></span>                          | <span data-ttu-id="316ea-240">System. Management. Automation. PSReference</span><span class="sxs-lookup"><span data-stu-id="316ea-240">System.Management.Automation.PSReference</span></span>                            |
|<span data-ttu-id="316ea-241">verifiering</span><span class="sxs-lookup"><span data-stu-id="316ea-241">regex</span></span>                        | <span data-ttu-id="316ea-242">System. text. RegularExpressions. regex</span><span class="sxs-lookup"><span data-stu-id="316ea-242">System.Text.RegularExpressions.Regex</span></span>                                |
|<span data-ttu-id="316ea-243">körnings utrymme</span><span class="sxs-lookup"><span data-stu-id="316ea-243">runspace</span></span>                     | <span data-ttu-id="316ea-244">System. Management. Automation. körnings utrymmen. körnings utrymme</span><span class="sxs-lookup"><span data-stu-id="316ea-244">System.Management.Automation.Runspaces.Runspace</span></span>                     |
|<span data-ttu-id="316ea-245">runspacefactory</span><span class="sxs-lookup"><span data-stu-id="316ea-245">runspacefactory</span></span>              | <span data-ttu-id="316ea-246">System. Management. Automation. körnings utrymmen. RunspaceFactory</span><span class="sxs-lookup"><span data-stu-id="316ea-246">System.Management.Automation.Runspaces.RunspaceFactory</span></span>              |
|<span data-ttu-id="316ea-247">SByte</span><span class="sxs-lookup"><span data-stu-id="316ea-247">sbyte</span></span>                        | <span data-ttu-id="316ea-248">System. SByte</span><span class="sxs-lookup"><span data-stu-id="316ea-248">System.SByte</span></span>                                                        |
|<span data-ttu-id="316ea-249">script block</span><span class="sxs-lookup"><span data-stu-id="316ea-249">scriptblock</span></span>                  | <span data-ttu-id="316ea-250">System. Management. Automation. script block</span><span class="sxs-lookup"><span data-stu-id="316ea-250">System.Management.Automation.ScriptBlock</span></span>                            |
|<span data-ttu-id="316ea-251">SecureString</span><span class="sxs-lookup"><span data-stu-id="316ea-251">securestring</span></span>                 | <span data-ttu-id="316ea-252">System. Security. SecureString</span><span class="sxs-lookup"><span data-stu-id="316ea-252">System.Security.SecureString</span></span>                                        |
|<span data-ttu-id="316ea-253">semver</span><span class="sxs-lookup"><span data-stu-id="316ea-253">semver</span></span>                       | <span data-ttu-id="316ea-254">System. Management. Automation. SemanticVersion</span><span class="sxs-lookup"><span data-stu-id="316ea-254">System.Management.Automation.SemanticVersion</span></span>                        |
|<span data-ttu-id="316ea-255">short</span><span class="sxs-lookup"><span data-stu-id="316ea-255">short</span></span>                        | <span data-ttu-id="316ea-256">System. Int16</span><span class="sxs-lookup"><span data-stu-id="316ea-256">System.Int16</span></span>                                                        |
|<span data-ttu-id="316ea-257">samma</span><span class="sxs-lookup"><span data-stu-id="316ea-257">single</span></span>                       | <span data-ttu-id="316ea-258">System. Single</span><span class="sxs-lookup"><span data-stu-id="316ea-258">System.Single</span></span>                                                       |
|<span data-ttu-id="316ea-259">sträng</span><span class="sxs-lookup"><span data-stu-id="316ea-259">string</span></span>                       | <span data-ttu-id="316ea-260">System. String</span><span class="sxs-lookup"><span data-stu-id="316ea-260">System.String</span></span>                                                       |
|<span data-ttu-id="316ea-261">SupportsWildcards</span><span class="sxs-lookup"><span data-stu-id="316ea-261">SupportsWildcards</span></span>            | <span data-ttu-id="316ea-262">System. Management. Automation. SupportsWildcardsAttribute</span><span class="sxs-lookup"><span data-stu-id="316ea-262">System.Management.Automation.SupportsWildcardsAttribute</span></span>             |
|<span data-ttu-id="316ea-263">växla</span><span class="sxs-lookup"><span data-stu-id="316ea-263">switch</span></span>                       | <span data-ttu-id="316ea-264">System. Management. Automation. SwitchParameter</span><span class="sxs-lookup"><span data-stu-id="316ea-264">System.Management.Automation.SwitchParameter</span></span>                        |
|<span data-ttu-id="316ea-265">tidsintervall</span><span class="sxs-lookup"><span data-stu-id="316ea-265">timespan</span></span>                     | <span data-ttu-id="316ea-266">System. TimeSpan</span><span class="sxs-lookup"><span data-stu-id="316ea-266">System.TimeSpan</span></span>                                                     |
|<span data-ttu-id="316ea-267">typ</span><span class="sxs-lookup"><span data-stu-id="316ea-267">type</span></span>                         | <span data-ttu-id="316ea-268">System. Type</span><span class="sxs-lookup"><span data-stu-id="316ea-268">System.Type</span></span>                                                         |
|<span data-ttu-id="316ea-269">uint</span><span class="sxs-lookup"><span data-stu-id="316ea-269">uint</span></span>                         | <span data-ttu-id="316ea-270">System. UInt32</span><span class="sxs-lookup"><span data-stu-id="316ea-270">System.UInt32</span></span>                                                       |
|<span data-ttu-id="316ea-271">UInt16</span><span class="sxs-lookup"><span data-stu-id="316ea-271">uint16</span></span>                       | <span data-ttu-id="316ea-272">System. UInt16</span><span class="sxs-lookup"><span data-stu-id="316ea-272">System.UInt16</span></span>                                                       |
|<span data-ttu-id="316ea-273">UInt32</span><span class="sxs-lookup"><span data-stu-id="316ea-273">uint32</span></span>                       | <span data-ttu-id="316ea-274">System. UInt32</span><span class="sxs-lookup"><span data-stu-id="316ea-274">System.UInt32</span></span>                                                       |
|<span data-ttu-id="316ea-275">UInt64</span><span class="sxs-lookup"><span data-stu-id="316ea-275">uint64</span></span>                       | <span data-ttu-id="316ea-276">System. UInt64</span><span class="sxs-lookup"><span data-stu-id="316ea-276">System.UInt64</span></span>                                                       |
|<span data-ttu-id="316ea-277">ulong</span><span class="sxs-lookup"><span data-stu-id="316ea-277">ulong</span></span>                        | <span data-ttu-id="316ea-278">System. UInt64</span><span class="sxs-lookup"><span data-stu-id="316ea-278">System.UInt64</span></span>                                                       |
|<span data-ttu-id="316ea-279">URI</span><span class="sxs-lookup"><span data-stu-id="316ea-279">uri</span></span>                          | <span data-ttu-id="316ea-280">System. URI</span><span class="sxs-lookup"><span data-stu-id="316ea-280">System.Uri</span></span>                                                          |
|<span data-ttu-id="316ea-281">ushort</span><span class="sxs-lookup"><span data-stu-id="316ea-281">ushort</span></span>                       | <span data-ttu-id="316ea-282">System. UInt16</span><span class="sxs-lookup"><span data-stu-id="316ea-282">System.UInt16</span></span>                                                       |
|<span data-ttu-id="316ea-283">ValidateCount</span><span class="sxs-lookup"><span data-stu-id="316ea-283">ValidateCount</span></span>                | <span data-ttu-id="316ea-284">System. Management. Automation. ValidateCountAttribute</span><span class="sxs-lookup"><span data-stu-id="316ea-284">System.Management.Automation.ValidateCountAttribute</span></span>                 |
|<span data-ttu-id="316ea-285">ValidateDrive</span><span class="sxs-lookup"><span data-stu-id="316ea-285">ValidateDrive</span></span>                | <span data-ttu-id="316ea-286">System. Management. Automation. ValidateDriveAttribute</span><span class="sxs-lookup"><span data-stu-id="316ea-286">System.Management.Automation.ValidateDriveAttribute</span></span>                 |
|<span data-ttu-id="316ea-287">ValidateLength</span><span class="sxs-lookup"><span data-stu-id="316ea-287">ValidateLength</span></span>               | <span data-ttu-id="316ea-288">System. Management. Automation. ValidateLengthAttribute</span><span class="sxs-lookup"><span data-stu-id="316ea-288">System.Management.Automation.ValidateLengthAttribute</span></span>                |
|<span data-ttu-id="316ea-289">ValidateNotNull</span><span class="sxs-lookup"><span data-stu-id="316ea-289">ValidateNotNull</span></span>              | <span data-ttu-id="316ea-290">System. Management. Automation. ValidateNotNullAttribute</span><span class="sxs-lookup"><span data-stu-id="316ea-290">System.Management.Automation.ValidateNotNullAttribute</span></span>               |
|<span data-ttu-id="316ea-291">ValidateNotNullOrEmpty</span><span class="sxs-lookup"><span data-stu-id="316ea-291">ValidateNotNullOrEmpty</span></span>       | <span data-ttu-id="316ea-292">System. Management. Automation. ValidateNotNullOrEmptyAttribute</span><span class="sxs-lookup"><span data-stu-id="316ea-292">System.Management.Automation.ValidateNotNullOrEmptyAttribute</span></span>        |
|<span data-ttu-id="316ea-293">ValidatePattern</span><span class="sxs-lookup"><span data-stu-id="316ea-293">ValidatePattern</span></span>              | <span data-ttu-id="316ea-294">System. Management. Automation. ValidatePatternAttribute</span><span class="sxs-lookup"><span data-stu-id="316ea-294">System.Management.Automation.ValidatePatternAttribute</span></span>               |
|<span data-ttu-id="316ea-295">ValidateRange</span><span class="sxs-lookup"><span data-stu-id="316ea-295">ValidateRange</span></span>                | <span data-ttu-id="316ea-296">System. Management. Automation. ValidateRangeAttribute</span><span class="sxs-lookup"><span data-stu-id="316ea-296">System.Management.Automation.ValidateRangeAttribute</span></span>                 |
|<span data-ttu-id="316ea-297">ValidateScript</span><span class="sxs-lookup"><span data-stu-id="316ea-297">ValidateScript</span></span>               | <span data-ttu-id="316ea-298">System. Management. Automation. ValidateScriptAttribute</span><span class="sxs-lookup"><span data-stu-id="316ea-298">System.Management.Automation.ValidateScriptAttribute</span></span>                |
|<span data-ttu-id="316ea-299">ValidateSet</span><span class="sxs-lookup"><span data-stu-id="316ea-299">ValidateSet</span></span>                  | <span data-ttu-id="316ea-300">System. Management. Automation. ValidateSetAttribute</span><span class="sxs-lookup"><span data-stu-id="316ea-300">System.Management.Automation.ValidateSetAttribute</span></span>                   |
|<span data-ttu-id="316ea-301">ValidateTrustedData</span><span class="sxs-lookup"><span data-stu-id="316ea-301">ValidateTrustedData</span></span>          | <span data-ttu-id="316ea-302">System. Management. Automation. ValidateTrustedDataAttribute</span><span class="sxs-lookup"><span data-stu-id="316ea-302">System.Management.Automation.ValidateTrustedDataAttribute</span></span>           |
|<span data-ttu-id="316ea-303">ValidateUserDrive</span><span class="sxs-lookup"><span data-stu-id="316ea-303">ValidateUserDrive</span></span>            | <span data-ttu-id="316ea-304">System. Management. Automation. ValidateUserDriveAttribute</span><span class="sxs-lookup"><span data-stu-id="316ea-304">System.Management.Automation.ValidateUserDriveAttribute</span></span>             |
|<span data-ttu-id="316ea-305">version</span><span class="sxs-lookup"><span data-stu-id="316ea-305">version</span></span>                      | <span data-ttu-id="316ea-306">System. version</span><span class="sxs-lookup"><span data-stu-id="316ea-306">System.Version</span></span>                                                      |
|<span data-ttu-id="316ea-307">void</span><span class="sxs-lookup"><span data-stu-id="316ea-307">void</span></span>                         | <span data-ttu-id="316ea-308">System. Void</span><span class="sxs-lookup"><span data-stu-id="316ea-308">System.Void</span></span>                                                         |
|<span data-ttu-id="316ea-309">WildcardPattern</span><span class="sxs-lookup"><span data-stu-id="316ea-309">WildcardPattern</span></span>              | <span data-ttu-id="316ea-310">System. Management. Automation. WildcardPattern</span><span class="sxs-lookup"><span data-stu-id="316ea-310">System.Management.Automation.WildcardPattern</span></span>                        |
|<span data-ttu-id="316ea-311">tjänst</span><span class="sxs-lookup"><span data-stu-id="316ea-311">wmi</span></span>                          | <span data-ttu-id="316ea-312">System. Management. ManagementObject</span><span class="sxs-lookup"><span data-stu-id="316ea-312">System.Management.ManagementObject</span></span>                                  |
|<span data-ttu-id="316ea-313">wmiclass</span><span class="sxs-lookup"><span data-stu-id="316ea-313">wmiclass</span></span>                     | <span data-ttu-id="316ea-314">System. Management. ManagementClass</span><span class="sxs-lookup"><span data-stu-id="316ea-314">System.Management.ManagementClass</span></span>                                   |
|<span data-ttu-id="316ea-315">wmisearcher</span><span class="sxs-lookup"><span data-stu-id="316ea-315">wmisearcher</span></span>                  | <span data-ttu-id="316ea-316">System. Management. ManagementObjectSearcher</span><span class="sxs-lookup"><span data-stu-id="316ea-316">System.Management.ManagementObjectSearcher</span></span>                          |
|<span data-ttu-id="316ea-317">X500DistinguishedName</span><span class="sxs-lookup"><span data-stu-id="316ea-317">X500DistinguishedName</span></span>        | <span data-ttu-id="316ea-318">System. Security. Cryptography. X509Certificates. X500DistinguishedName</span><span class="sxs-lookup"><span data-stu-id="316ea-318">System.Security.Cryptography.X509Certificates.X500DistinguishedName</span></span> |
|<span data-ttu-id="316ea-319">X509Certificate</span><span class="sxs-lookup"><span data-stu-id="316ea-319">X509Certificate</span></span>              | <span data-ttu-id="316ea-320">System. Security. Cryptography. X509Certificates. X509Certificate</span><span class="sxs-lookup"><span data-stu-id="316ea-320">System.Security.Cryptography.X509Certificates.X509Certificate</span></span>       |
|<span data-ttu-id="316ea-321">xml</span><span class="sxs-lookup"><span data-stu-id="316ea-321">xml</span></span>                          | <span data-ttu-id="316ea-322">System.Xml.Xmldokument</span><span class="sxs-lookup"><span data-stu-id="316ea-322">System.Xml.XmlDocument</span></span>                                              |
